# small_projs

cost_vis_util/: test.py  type.py
frenet_util/: virtual_lane.cpp
lat_magnitude/: CMakeLists.txt
lat_magnitude/src/: main.cpp
path_boundary_generator/: CMakeLists.txt
path_boundary_generator/src/: main.cpp
purepursuit/: main.cpp  purepursuit.cpp
qp_path_generator/: CMakeLists.txt  README.md
qp_path_generator/src/: osqp_demo.cpp  osqp_problem.cpp  osqp_problem.h  vis.py
ui/: data.py  mm.txt  requirements.txt  test.py  ui.py
